@@ -1,3 +1,9 @@
+2008-06-26  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tkPanedWindow.c (PanedWindowProxyCommand)
+	(DisplayPanedWindow): Ensure that a zero width never gets fed to the
+	underlying window system. [Bug 1639824]  (Backport fix from dkf).
+
 2008-06-20  Joe English  <jenglish@users.sourceforge.net>
 
 	* library/ttk/treeview.tcl: Backport fix for [Bug 1951733]
